--- a/caseStudyWP/appendix-samSim.Rmd
+++ b/caseStudyWP/appendix-samSim.Rmd
@@ -75,9 +75,9 @@ $\overline{\omega}$ & mean for forecast lognormal error\\
 $\sigma_{\omega}$ & variance for forecast lognormal error\\
 $CV(\overline{ER}_{n})$ & CV for MU-specific exploitation rate variability \\
 $CV(ER_{y,i,n})$ & CV for CU-specific exploitation rate variability\\
-$\psi$ & Proportion of the catch associated with mixed stock catch\\
+$\psi$ & Proportion of the catch associated with mixed-stock catch\\
 $ERagg_{y,i}$ & Total exploitation rates\\
-$\kappa$ & multivariate logistic variability parameter associated with assigning catch in mixed stock fisheries to the correct CU\\
+$\kappa$ & multivariate logistic variability parameter associated with assigning catch in mixed-stock fisheries to the correct CU\\
 $\hat{\alpha}_{y,i}$ & Estimated Ricker productivity parameter \\
 $\hat{\beta}_{y,i}$ & Estimated Ricker inverse capacity parameter \\
 \hline
@@ -85,7 +85,7 @@ $\hat{\beta}_{y,i}$ & Estimated Ricker inverse capacity parameter \\
 \end{longtable}
 
 
-
+<!--CH: In samSim, I think we call calendar recruitment, 'returns'. I've added this in parentheses below to help with cross-checking against code. Okay?-->
 
 \begin{longtable}[]{l p{13.5cm}}
 \caption{List of \texttt{samSim} model variables.}\\
@@ -96,7 +96,7 @@ Notation & Definition \\
 \hline
 $S_{y,i}$ & Spawners\\
 $Seq_{i}$ & Equilibrium spawners\\
-$RY_{y,i}$ & Calendar year recruitments\\
+$RY_{y,i}$ & Calendar year recruitments (returns)\\
 $p_{y,i,j}$ & Proportions of returns at age\\
 $R_{y,i}$ & Brood year recruits \\
 $Ra_{y,i,j}$ & Age specific brood year recruits\\
@@ -117,12 +117,12 @@ $ER_{y,i,n}$ & Exploitation rate including MU- and CU-specific variability\\
 $o1$, $o2$ & Shape parameters for Beta distribution used to generate CU-specific variability\\
 $\phi_{y,i,n}$ & Standard deviation for CU-specific exploitation rate variability\\
 ${C}_{y,i,n}$ & Catch \\
-${mC}_{y,i}$ & Mixed stock Canadian catches \\
-${sC}_{y,i}$ & Single stock Canadian catches\\
+${mC}_{y,i}$ & Mixed-stock Canadian catches \\
+${sC}_{y,i}$ & Wingle-stock Canadian catches\\
 $ERagg_{y,i}$ & Aggregate exploitation rates\\
 ${obsC}_{y,i,n}$ & Observed nation-specific catches \\
-${obsmC}_{y,i}$ & Observed mixed stock Canadian catches\\
-${obssC}_{y,i}$ & Observed single stock Canadian catches\\
+${obsmC}_{y,i}$ & Observed mixed-stock Canadian catches\\
+${obssC}_{y,i}$ & Observed single-stock Canadian catches\\
 $u_{y,i,n}$ & Lognormal error component of observed catches\\
 $pCU_{y,i}$ & Proportion of catches from each CU\\
 $obspCU_{y,i}$ & Observed proportion of catches from each CU \\
@@ -171,8 +171,10 @@ Seq_{i} = \alpha_{i}/\beta_{i}
 
 
 
-The age structure of the returns is computed following a multivariate logistic error structure based on the long term average age structure for each CU, $\overline{p}_{i,j}$ and the CU-specific variability parameter $\tau_i$ [@schnuteInfluenceErrorPopulation1995]  (Equation \@ref(eq:mat). The age structure error can vary or be held constant among CUs. Calendar year recruitment is only calculated after the sixth year of the priming phase. It is the product of the brood year recruitment and the age structure of the returns (Equation \@ref(eq:RY).
+The age structure of the recruitment by BY <!--CH: changed this from retuns to R by BY--> is computed following a multivariate logistic error structure based on the long term average age structure for each CU, $\overline{p}_{i,j}$ and the CU-specific variability parameter $\tau_i$ [@schnuteInfluenceErrorPopulation1995]  (Equation \@ref(eq:mat). The age structure error can vary or be held constant among CUs. Calendar year recruitment is then calculated after the sixth year of the priming phase. It is the product of the brood year recruitment and the age structure of the recruits <!--CH: changes this from returns to recruits--> (Equation \@ref(eq:RY).
 
+<!--CH: I think this is the same thing but I just wanted to be clear that the multivariate logistic aging error was applied to recruitment by BY, not calendar year Returns. Total returns are calculated in the 2nd eqn below.
+-->
 \begin{align}
   p_{y,i,j} \sim \text{Multivariate Logistic}(\overline{p}_{i,j},\tau_{i}) \\
   (\#eq:mat)
@@ -259,7 +261,7 @@ Although in our implementation of `samSim` for Interior Fraser Coho with marine 
 In the priming loop, the management quantities and benchmarks are only calculated in the last two generations. The management benchmarks are calculated according to three options: "stockRecruit", "percentile" and "habitat". `samSim` has the capability of estimating management quantities and benchmarks on a yearly basis, relying on the data obtained from the beginning of the time series to the current simulation year. However for the purpose of the LRP study cases, time invariant management benchmarks were used. For this reason we omit the time index, $y$, from the notation used for the management quantities. 
 
  
-If the "stockRecruit" option is used, the management quantities are $Smsy_{y,i}$ and $Sgen_{y,i}$ calculated based on the stock-recruitment parameters. When the model with the survival covariate is used, the $\alpha_{i}$ parameter is modified to incorporate the survival component (Equation \@ref(eq:alphamb)). In order to keep the management benchmarks constant through time, the long term average of the survival covariate is used. $Smsy_{i}$ is calculated following the explicit solution provided by @scheuerellExplicitSolutionCalculating2016 using the Lambert W function (Equation  \@ref(eq:smsysamsim)). $Sgen_{i}$ is estimated by solving Equation \@ref(eq:Sgensamsim) numerically, as described by @holtIndicatorsStatusBenchmarks2009a. The Lower management benchmark is set to $Sgen_{y,i}$ and the upper benchmark is set to 80\% of $Smsy_{y,i}$.
+If the "stockRecruit" option is used, the management quantities are $Smsy_{i}$ and $Sgen_{i}$<!--CH: I revised these benchmarks by taking out the y subscript, as described in the pgh above--> calculated based on the stock-recruitment parameters. When the model with the survival covariate is used, the $\alpha_{i}$ parameter is modified to incorporate the survival component (Equation \@ref(eq:alphamb)). In order to keep the management benchmarks constant through time, the long term average of the survival covariate is used. $Smsy_{i}$ is calculated following the explicit solution provided by @scheuerellExplicitSolutionCalculating2016 using the Lambert W function (Equation  \@ref(eq:smsysamsim)). $Sgen_{i}$ is estimated by solving Equation \@ref(eq:Sgensamsim) numerically, as described by @holtIndicatorsStatusBenchmarks2009a. The lower benchmark is set to $Sgen_{i}$ and the upper benchmark is set to 80\% of $Smsy_{i}$.<!--CH: again y subscript removed-->
 
 
 \begin{align}
@@ -283,23 +285,23 @@ If the "stockRecruit" option is used, the management quantities are $Smsy_{y,i}$
 \end{align}
 
 
-If the "percentile" benchmark option is chosen, the upper benchmark is set to the 50^th^ percentile of historical spawners ($S_{1:y,i}$). The lower benchmark is set to the 25^th^ percentile of historical spawners. If the "habitat" benchmark option is chosen, the benchmarks are computed using the same approach as in the "stockRecruit" option. The difference is in the origin of the stock recruit parameters, i.e., from the habitat model instead of spawner-recruitment curve.
+If the "percentile" benchmark option is chosen, the upper benchmark is set to the 50^th^ percentile of historical spawners ($S_{1:y,i}$). The lower benchmark is set to the 25^th^ percentile of historical spawners. <!--CH: added this next 2 sentences-->Note, percentile-based benchmarks were not implemented in our case studies for projection-based LRPs. Future applications could vary the percentiles used as lower and upper benchmarks as recommended in holtEvaluatingBenchmarksBiological2018. If the "habitat" benchmark option is chosen, the benchmarks are computed using the same approach as in the "stockRecruit" option. The difference is in the origin of the stock recruit parameters, i.e., from the habitat model instead of spawner-recruitment curve.
 
 
 ### Infill missing data
 
-The last step of  the model priming is infilling, which is only relevant if stock recruitment data are available and there are gaps in the last 12 years of the time series. Any gaps in the last 12 years of the Spawners and Recruits time series are infilled with a geometric mean of the entire priming period. In the priming phase, we assume that all variables are known without error, therefore all observations are set to the true simulation values, i.e., no observation error is added. 
+The last step of the model priming is infilling, which is only relevant if stock recruitment data are available and there are gaps in the last 12 years of the time series. Any gaps in the last 12 years of the Spawners and Recruits time series are infilled with a geometric mean of the entire priming period. In the priming phase, we assume that all variables are known without error, therefore all observations are set to the true simulation values, i.e., no observation error is added. 
 
 
 ## MODEL PROJECTIONS
 
 The model projection phase is used to represent future potential outcomes. The steps in this phase will depend on the scenarios and management procedures selected by the user, and therefore will vary depending on the model application. In the following section, we list all steps in the order they appear in the code and indicate in the text if the step was used for the LRP case studies. Similarly to the priming phase, the subheadings in this section can be read as pseudocode. The projections run for each trial from year `nPrime + 1` to `Y`, the latter being the number of projection years defined by the user. 
 
-
+<!--CH:Catarina, do you know why in the pdf version of this the line numbers stop here. I think it has something to do with the equations? Not a huge issue, as the sections are well numbered for rewiew purposes.-->
 
 ### Specify stock recruitment parameters
 
-Similarly to the priming phase, the first step on the projection loop is to define the stock recruitment parameters. The $\beta_{i}$ and $\sigma_{i}$ parameters are fixed through time and were already defined in the priming phase. However, if the user specifies productivity changes through time, then the productivity parameter $\alpha{y,i}$ is adjusted every year following a linear trend. A detailed description of the algorithm used to generate productivity trends is out of the scope of this report as the study cases do not include scenarios with productivity changes. As the productivity parameter is held constant in the study cases, we will continue to use the time-invariant notation ($\alpha_{i}$) for the parameter in the sections to follow. 
+Similarly to the priming phase, the first step on the projection loop is to define the stock recruitment parameters. The $\beta_{i}$ and $\sigma_{i}$ parameters are fixed through time and were already defined in the priming phase. However, if the user specifies productivity changes through time, then the productivity parameter $\alpha_{y,i}$ <!--CH: I added an underscore (_) here to make the {y,i} subscripted, okay?--> is adjusted every year following a linear trend. A detailed description of the algorithm used to generate productivity trends is out of the scope of this report as the study cases do not include scenarios with productivity changes. As the productivity parameter is held constant in the study cases, we will continue to use the time-invariant notation ($\alpha_{i}$) for the parameter in the sections to follow. 
 
 ### Project management benchmarks
 
@@ -326,7 +328,15 @@ The observed recruitment by brood year is retrieved by multiplying the true recr
   (\#eq:obsR)
 \end{align}
 
+<!--CH: I'm not sure these equations capture these lines of code? lines 1407-1458
+https://github.com/Pacific-salmon-assess/samSim/blob/f055ade3dd50ae3ad994868993a5673d08ffcb87/R/genericRecoverySimulator.R#L1407
 
+i.e., in samSim the multivariate logistic aging error is applied to observed ppns of returns at age, not true proportions. These observed  ppns of returns have to be calculated manually as in those lines of code. I think we did this because the true and observed ppns of returns can deviate quite a bit, and we wanted aging error to capture this.
+
+This is inconsequential for our analysis (where obs error = 0), but I think does deviate from the code. If I'm understanding the code and this write-up correctly, then I think we could add a note that we implement an alternative version in the code, if we don't have time to write up those eqns. Let me know if I'm way off base here! 
+
+
+-->
 
 ### Project recruitment forecast
 
@@ -346,7 +356,7 @@ The observed recruitment by brood year is retrieved by multiplying the true recr
 
 ### Project realized catches
 
-The next step is to calculate the realized catches following a harvest control rule. Both study cases in this report use the fixed exploitation rate harvest control rule. In this option, the catch is the product of calendar year recruits and fixed exploitation rate over all projection years (Equation  \@ref(eq:Catagg)). However, even though the harvest control rule specifies fixed exploitation rate, the realized exploitation rates vary from year to year due to changes in population distribution and  fisheries dynamics. In this section we describe the layers of variability added to the simulated catches. Two layers of variability are considered in `samSim`, these represent MU-specific variability and CU-specific variability. Both uncertainty layers are implemented through draws of exploitation rate values from beta distributions. Currently only the Canadian catches include the annual added variability. In the LRP study cases, both U.S. Catches and Canadian single stock catches are set to zero, therefore only the Canadian mixed stock catches are implemented. 
+The next step is to calculate the realized catches following a harvest control rule. Both study cases in this report use the fixed exploitation rate harvest control rule. In this option, the catch is the product of calendar year recruits and fixed exploitation rate over all projection years (Equation  \@ref(eq:Catagg)). However, even though the harvest control rule specifies fixed exploitation rate, the realized exploitation rates vary from year to year due to changes in population distribution and  fisheries dynamics. In this section we describe the layers of variability added to the simulated catches. Two layers of variability are considered in `samSim`, these represent MU-specific variability and CU-specific variability. Both uncertainty layers are implemented through draws of exploitation rate values from beta distributions. Currently only the Canadian catches include the annual added variability. In the LRP study cases, both U.S. Catches and Canadian single-stock catches are set to zero, therefore only the Canadian mixed-stock catches are implemented. 
 
 
  The first layer of catch variability is implemented at the MU level. The error is assumed to be the same for all CUs within an MU. The mean and variance for the MU level error are defined in the input files and then transformed into shape parameters for the Beta distribution draw (Equations \@ref(eq:ERMU)-\@ref(eq:deER1) ).
@@ -377,7 +387,7 @@ ER^{MU}_{y,n}
   (\#eq:deER)
 \end{align}
 
-In the second layer, CU-specific exploitation rates are drawn from a beta distribution using the output exploitation rate from the first layer as mean and CU-specific CV defined in the input files. The mean and CVs are transformed into shape parameters for the Beta distribution draws (Equations \@ref(eq:ERCU)-\@ref(eq:oERCU). The Catches are then computed by multiplying the CU specific $ER$ and the calendar year recruits Equation \@ref(eq:Catagg).
+In the second layer, CU-specific exploitation rates are drawn from a beta distribution using the output exploitation rate from the first layer as mean and CU-specific CV defined in the input files. The mean and CVs are transformed into shape parameters for the Beta distribution draws (Equations \@ref(eq:ERCU)-\@ref(eq:oERCU)). The Catches are then computed by multiplying the CU specific $ER$ and the calendar year recruits Equation \@ref(eq:Catagg).
 
 
 \begin{align}
@@ -413,7 +423,7 @@ ER_{y,i,n}
  
 
 
-The catch for Canada is further divided in two components, mixed stock fishery and single stock fisheries (Equations \@ref(eq:tacmix) and \@ref(eq:tacsingle)).
+The catch for Canada is further divided in two components, mixed-stock fishery and single-stock fisheries (Equations \@ref(eq:tacmix) and \@ref(eq:tacsingle)). Single-stock fisheries were not included in our LRP analyses, setting $psi_{y,i}$ =1, where:<!--CH: added this last sentence, okay?-->
 
 
 
@@ -428,7 +438,7 @@ The catch for Canada is further divided in two components, mixed stock fishery a
 \end{align}
 
 
-The next step is to compute the aggregate exploitation rate and the remaining number of Spawners (Equations \@ref(eq:eragg) and \@ref(eq:spawners)).
+The next step is to compute the aggregate exploitation rate and the remaining number of spawners (Equations \@ref(eq:eragg) and \@ref(eq:spawners)).
 
 
 
@@ -446,7 +456,9 @@ The next step is to compute the aggregate exploitation rate and the remaining nu
 
 ### Project observed data
 
-In this step, observation error is added to the quantities calculated in the current time step. Catch observation error is given by a log normal distribution (Equations \@ref(eq:obsC)-\@ref(eq:obssingleC)), the distribution is truncated between the 0.0001 and 0.9999 quantiles. If the catch is taken in a mixed stock fishery, additional multivariate logistic error is incorporated to account for uncertainty in the stock assignment process (Equation \@ref(eq:obspCU)).
+In this step, observation error is added to the quantities calculated in the current time step. <!--CH: added next sentence to remind readers that we didn't use this-->Observation errors were not included in our implementation for LRPs because LRPs were derived from true underlying population dynamics without observation errors and the management procedure applied (constant exploitation rates) did not require information on observed abundances. 
+
+Catch observation error is given by a log normal distribution (Equations \@ref(eq:obsC)-\@ref(eq:obssingleC)), the distribution is truncated between the 0.0001 and 0.9999 quantiles. If the catch is taken in a mixed-stock fishery, additional multivariate logistic error is incorporated to account for uncertainty in the stock assignment process (Equation \@ref(eq:obspCU)).
 
 
 
@@ -460,14 +472,14 @@ obsC_{y,i,n} =
 \end{align}
 
 
-Canadian mixed stock fisheries observed catches:
+Canadian mixed-stock fisheries observed catches:
 \begin{align}
   {obsmC}_{y,i} &= {mC}_{y,i} \cdot u_{y,i,n} \cdot obspCU_{y,i} 
   (\#eq:obsmixC)
 \end{align}
 
 
-Canadian single stock fisheries observed catches:
+Canadian single-stock fisheries observed catches:
 
 \begin{align}
   {obssC}_{y,i} &= {sC}_{y,i} \cdot u_{y,i,n}
@@ -515,27 +527,28 @@ u_{y,i,n} &\sim logN(0,\sigma_{C})
   (\#eq:obsER)
 \end{align}
 
+
 ### Run stock assessment and calculate management quantities
 
-This next phase of the projection loop simulates salmon stock assessment analysis. The linearized simple Ricker stock recruit curve is fit to the observed data and $\hat{a}_{y,i}$ and $\hat{b}_{y,i}$ are estimated.
+This next phase of the projection loop simulates salmon stock assessment analysis. The linearized simple Ricker stock-recruit curve is fit to the observed data and $\hat{a}_{y,i}$ and $\hat{b}_{y,i}$ are estimated. Again, this step was not implemented for LRP analyses, which used benchmarks calculated from true underlying parameters provided as inputs (i.e., from a normative period).<!--CH: moved this sentence up  from below to here-->
 
 \begin{align}
   log \left( \dfrac{obsR_{1:y,i}}{obsS_{1:y,i}}\right) &= \hat{\alpha}_{y,i}-\hat{\beta}_{y,i} \cdot  obsS_{y,i}\\
   (\#eq:obslogRS)
 \end{align}
 
-The management quantities, i.e., $Sgen$ and $Smsy$ or Spawners quantiles, can then be re-estimated based on the estimated stock recruitment parameters and the observed time series of spawners using the same procedure described in section \@ref(compute-management-quantities-and-benchmarks). The LRP study cases, however, set the management benchmarks to the normative period, and for this reason the management quantities are kept constant and equal to the management benchmark at the last year of the priming period.  
+The management quantities, i.e., $Sgen$ and $Smsy$ or Spawners quantiles, can then be recalculated based on the estimated stock-recruitment parameters and the observed time series of spawners using the same procedure described in section \@ref(compute-management-quantities-and-benchmarks). 
 
 
 
 ### Project population dynamics
 
 
-In this section the brood year recruitment for the current projection year is computed. The first step is to generate the marine survival estimates which are used to project recruitment when the Ricker model with survival covariates is used. The survival covariates are generated using the method described in Section \@ref(recruitment-data-is-not-available) and Equations \@ref(eq:survCY) and \@ref(eq:surv). Marine survival covariates are considered to be constant across CUs.
+In this section the brood year recruitment for the current projection year is computed. The first step is to generate the marine survival estimates which are used to project recruitment when the Ricker model with survival covariates is applied. The survival covariates are generated using the method described in Section \@ref(recruitment-data-is-not-available) and Equations \@ref(eq:survCY) and \@ref(eq:surv). Marine survival covariates are considered to be constant across CUs.
 
-The following step is compute the age structure of the returns with random error, which follows the same procedure described in Section \@ref(recruitment-data-is-not-available). The age structure follows a distribution with mean age structure and standard deviation for each CU given in the input files.
+The following step is to compute the age structure of the returns with random error, which follows the same procedure described in Section \@ref(recruitment-data-is-not-available). The age structure follows a distribution with mean age structure and standard deviation for each CU given in the input files.
 
-In the next step, the recruitment deviations are computed with multivariate normal distribution, reflecting the recruitment covariance among CUs. Recruitment is then calculated following the same procedure described in Section\@ref(recruitment-data-is-not-available) and using Equation \@ref(eq:Rickersimple) for the simple Ricker model, or Equation \@ref(eq:Rickersurv) for the Ricker model with survival covariates. 
+In the next step generates recruitment deviations, which are computed with multivariate normal distribution, reflecting the recruitment covariance among CUs. Recruitment is then calculated following the same procedure described in Section\@ref(recruitment-data-is-not-available) and using Equation \@ref(eq:Rickersimple) for the simple Ricker model, or Equation \@ref(eq:Rickersurv) for the Ricker model with survival covariates. 
 
 The last step of the projection loop is to compute the true and observed upper and lower benchmarks, which are based on the management quantities described in the previous section (Section \@ref(run-stock-assessment-and-calculate-management-quantities). These are either stock-recruit or percentile benchmarks, as described in section \@ref(compute-management-quantities-and-benchmarks) computed based on the true and observed spawner abundances. 
 
