--- a/caseStudyWP/03-chap3.Rmd
+++ b/caseStudyWP/03-chap3.Rmd
@@ -290,7 +290,7 @@ When CU status was based on the IFCRT distributional target, the fit of the logi
 
 <!--CH: Does this table need to be updated based on Catarina's updated analyses?, Maybe not, as I think the new data-stream only impacted spawner times-series for assessments, not benchmarks per se-->
 
-<!--KH: It looks like this table was already updated, which it nneded to be because using natural-origin spawners when comparing to Sgen did affect logistic regression fit, and therefore, LRPs  -->
+<!--KH: It looks like this table was already updated, which it needed to be because using natural-origin spawners when comparing to Sgen did affect logistic regression fit, and therefore, LRPs  -->
 
 \renewcommand*{\arraystretch}{1.5}
 \begin{table}
@@ -385,15 +385,14 @@ knitr::include_graphics("figure/coho-StatusByNCUs-SPopAbundThreshST-50.png")
 
 Forward projections of each of the five CUs with the Interior Fraser Coho SMU were done using the `samSim` modelling tool (Appendix \@ref(app:samsim-appendix)). Finer-scale projections at the scale of sub-populations were not possible as spawner-recruit data series were not available at this scale. As a result, projection-based LRPs using the IFCRT recovery target was not possible; we were restricted to looking at CU-level status estimates based on S~gen~. Parameters characterizing CU-level population dynamics, marine survival rates, and exploitation rates were derived directly from data sets described in Section \@ref(cohoData). Base case parameters and alternative parameter values tested in sensitivity analyses are provided in Table \@ref(tab:coho-BaseProjectPars). Additional details on key model parameterizations and sensitivity analyses are also described in text below.  
 
-Projection model outputs were used to estimate projection-based LRPs using the methods described on Section \@ref(projectedMethods). Forward projections were run for 30 years over 20,000 simulation trials, with projections initialized using spawner abundances from the most recent four return years, 2016 - 2020.  The high number of simulation trials was required to stabilize LRP estimates given the binning of aggregate escapement in 200-fish intervals to identify LRPs based on probability thresholds.  Simulated trajectories were close to stable after an initial adjustment to near equilibrium conditions (Figs. \@ref(coho-CUProjections-Ricker) and \@ref(coho-CUProjections-Ricker-priorCap)). <!--CH suggested rewording: "Simulated trajectories were near equilibrium after 4 years of  projections during which trajectories depended primarily on the historical time-series. "-->
-<!--KH: Carrie - can you please confirm that the wording in the last sentence is consistent with what we discussed including here?  I have also added a note to the discussion section about looking for future instabilities that affect LRP estimates-->
+Projection model outputs were used to estimate projection-based LRPs using the methods described on Section \@ref(projectedMethods). Forward projections were run for 30 years over 20,000 simulation trials, with projections initialized using spawner abundances from the most recent four return years, 2016 - 2020.  The high number of simulation trials was required to stabilize LRP estimates given the binning of aggregate escapement in 200-fish intervals to identify LRPs based on probability thresholds.  Simulated trajectories were near equilibrium after 4 years of  projections during which trajectories depended primarily on the historical time-series (Figures. \@ref(coho-CUProjections-Ricker) and \@ref(coho-CUProjections-Ricker-priorCap)).
 
 
 ***Stock recruitment dynamics***  
 
 Stock recruitment parameters for all five CUs were drawn from joint posterior distributions obtained by fitting the two stock recruit models described in Section \@ref(cohoSgen) (Ricker and Ricker_priorCap) to available spawner-recruit data using Bayesian Markov Chain Monte Carlo (MCMC) estimation. Bayesian estimation was done using tmbStan [@kristensenTMBAutomaticDifferentiation2016], which is an R package that allows MCMC samples to be drawn from a TMB model object using rStan [@standevelopmentteamRStanInterfaceStan2020]. Three MCMC chains were run for 14,000 iterations, with the first half of each chain excluded from the final posterior sample. Resulting joint posterior distributions included 21,000 samples. Posterior sampling was initiated at the MLE estimates for each model formulation. Neither model showed signs of convergence failure based on our examination of Rhat and effective sample size diagnostics, as well as visual inspections of marginal posterior distributions. A summary of marginal posterior distributions for each stock recruitment parameter ($\alpha$, $\beta$, $\gamma$, and $\sigma$) is provided in Appendix \@ref(app:coho-appendix). 
 
-The two stock recruitment models, Ricker and Ricker_priorCap, were treated as two alternative hypotheses about stock recruitment dynamics, which we compare against each other. We also considered a simple model-averaging approach, in which we equally weighted the two stock recruit models by combining projections prior to calculating a projection-based LRP <!--CH suggestion: "as a demonstration of model averaging"-->. Additional sensitivity analyses described below were only done using the base Ricker model.  
+The two stock recruitment models, Ricker and Ricker_priorCap, were treated as two alternative hypotheses about stock recruitment dynamics, which we compare against each other. We also considered a simple model-averaging approach, in which we equally weighted the two stock recruit models by combining projections prior to calculating a projection-based LRP as a demonstration of model averaging. Additional sensitivity analyses described below were only done using the base Ricker model.  
 
 ***Covariance in recruitment residuals***
 
@@ -560,7 +559,7 @@ knitr::include_graphics("figure/coho-projLRPCurve-byER.png")
 
 We compared annual estimates of SMU status relative to LRPs for the range of LRP estimation options considered in this case study (Figure \@ref(fig:coho-statusPlot-withBars)). For all aggregate abundance-based LRPs, we used LRPs estimated using a probability threshold of p = 0.5 (i.e., a 50% probability that all CUs would have status above their lower benchmark). We used the following labelling convention when comparing historical status estimates across LRP estimation methods: *"Metric" : "LRP Method" : "CU Status Method"*. 'Metric' refers to the choice of whether to base an LRP on the proportion of CUs above red CU status (Prop) or on aggregate SMU-level abundance (Abund). The 'LRP' method only applies to aggregate-abundance based LRPs, for which is can be logistic regression (Logistic) or projection-based (Proj). Finally, the 'CU Status Method' can be based on the Pacific Salmon Status Scanner in which CU abundance-based benchmarks are based on one of the two Ricker models (Scanner-Ricker or Scanner-priorCap). Or, when only a single benchmark is used to characterize CU status, it can be based on S\textsubscript{gen} estimated from one of the two Ricker models (Sgen-Ricker or Sgen-priorCap) or the IFCRT target (IFCRT). For example, when referring to an aggregate abundance-based LRP that is estimated via a logistic regression fit to historical CU status, with CU status estimated relative to S\textsubscript{gen} from the base Ricker model, we label it as "Abund: Logistic: Sgen_Ricker".  
 
-We show historical results for three types of proportional LRP methods: using the proportion of CUs with Pacific Salmon Status Scanner status > red (e.g., Prop: Scanner-Ricker), using the proportion of CUs with abundance > Sgen (e.g., Prop: Sgen-Ricker), and using the IFCRT distributional target status (Prop: IFCRT) . Holt et al. (in review) recommend that <!--CH: removed 'only'. I think we get the same message without that inclusion?-->the Pacific Salmon Status Scanner should be used to assess status; however, we show results for the single metric S\textsubscript{gen} and IFCRT approaches to demonstrate how the two approaches differ. This comparison is of interest because our aggregate abundance-based LRPs use status estimates based on a single metric rather than the Pacific Salmon Status Scanner status estimates.   
+We show historical results for three types of proportional LRP methods: using the proportion of CUs with Pacific Salmon Status Scanner status > red (e.g., Prop: Scanner-Ricker), using the proportion of CUs with abundance > Sgen (e.g., Prop: Sgen-Ricker), and using the IFCRT distributional target status (Prop: IFCRT) . Holt et al. (in review) recommend that the Pacific Salmon Status Scanner be used to assess status; however, we show results for the single metric S\textsubscript{gen} and IFCRT approaches to demonstrate how the two approaches differ. This comparison is of interest because our aggregate abundance-based LRPs use status estimates based on a single metric rather than the Pacific Salmon Status Scanner status estimates.   
 
 In addition to the LRP estimation methods presented so far in this case study, we include the full WSP assessment that was conducted in 2014 as an option for estimating CU status for use in a proportion-based LRP. We label this case "Prop : WSP-2014". SMU status would have been assessed as being above the LRP at this time as all CUs were assessed as amber or green.  
 
@@ -582,8 +581,6 @@ knitr::include_graphics("figure/coho-statusPlot_withBars2020.png")
 
 
 ## DISCUSSION
-
-<!--CH; I wonder if subheadings within the Discussion might help orient the reader a bit? It does contain a lot of information-->
 
 <!--BC: Not sure if this is the right place but might also recap insights gleaned from exploration of multidimensional approach and its utility in this context? -->
 
@@ -621,12 +618,7 @@ Given that the estimation of logistic regression-based LRPs were sensitive to da
 
 The sensitivity of projection-based LRPs to exploitation rate means that these LRPs are specific to the management context.  In our Interior Fraser Coho projections, we set exploitation rates at the recent average as fishery restrictions since 1998 have maintained relatively stable harvest dynamics. In this case, the LRP represents the level of aggregate abundance that would be required to ensure all CUs were above S~gen~ given a specified fixed exploitation rate policy. If a decision was made to increase the exploitation rate, the LRP would also be increased accordingly to ensure that the underlying objective of all CUs above S~gen~ could be achieved. This pattern arises due to variability in productivity among CUs; when higher exploitation rates are applied, some low productivity CUs will require higher spawning abundances to ensure that they remain above Sgen. This effect is demonstrated in Appendix \@ref(app:ERsensitivity-appendix). As a result, projection-based LRPs are not static measures of serious harm, as commonly developed for other stocks and species.
 
-Projection-based LRPs were also sensitive to the level of co-variation in spawner abundances among CUs over time. Reductions in covariation resulted in increased LRP estimates. This pattern will result in higher LRPs as the relationship between aggregate abundance and CU status weakens because projected LRPs will need to be higher to help avoid the situation where weak CUs drop into red status. <!--KH: Note that the following is new text added about looking for instabilies in projected time series. Carrie - can you please review? Thanks!  -->In general, all applications of projection-based LRPs should look for possible instabilities in projected abundances that may affect LRP estimates, including changes in co-variation of spawner abundance among CUs due to CUs with different productivity levels responding differently to exploitation.
-
-<!--CH suggestion on rewording of last sentence:
-"We recommend that possible instabilities in projections be evaluated for this SMU, and other applications for projection-based LRPs, which could arise due to changes in covariation of spawner abundance among CUs due to CUs with different productivity levels responding differently to exploitation."-->
-
-
+Projection-based LRPs were also sensitive to the level of co-variation in spawner abundances among CUs over time. Reductions in covariation resulted in increased LRP estimates. This pattern will result in higher LRPs as the relationship between aggregate abundance and CU status weakens because projected LRPs will need to be higher to help avoid the situation where weak CUs drop into red status. We recommend that possible instabilities in projections be evaluated for this SMU, and other applications for projection-based LRPs, which could arise due to changes in covariation of spawner abundance among CUs due to CUs with different productivity levels responding differently to exploitation.
 
 <!--CH: I think projection-based LRPs are also sensitivity to differences in size/capacity of component CUs. I guess this is shown somewhat in the Appendix on sens to ER, where I kept SREP constant or varying. If it comes up in the review we can point participants there-->
 
